toolchain/internal/core/analysis/testdata/errors/consts/reference_missing_enum_member.vdl
// @expect: E305

enum Status {
  Active
}

const defaultStatus = Status.Disabled
